<resources>
    <string name="app_name">PrimerParcial</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="boton_login">LOGIN</string>
    <string name="boton_register">REGISTRATE</string>
    <string name="lbl_login">LOGIN</string>
    <string name="tlb_settings">Settings</string>
    <string name="tlb_title">Productos STS</string>
    <string name="splash_powered">POWERED BY</string>
    <string name="coax12">El STS Coax12 es un sistema compacto y extremadamente eficiente, para la reproducción de la palabra y programa musical con altísima calidad, su respuesta es extremadamente plana, lo que lo hacen ideal para el monitoreo de escenario.
Su perfil bajo, su diseño y su tamaño compacto es ideal para ocupar el menor espacio posible en el escenario donde se lo utiliza, eliminando la obstrucción visual a los espectadores más cercanos, inconveniente típico de otros diseños.
Su conexionado frontal permite que el cableado del mismo sea aún más accesible y, a su vez, queda oculto a los ojos del público y de las cámaras de TV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_tech_spec1">TIPO</string>
    <string name="lbl_tech_spec2">RESPUESTA EN FRECUENCIA</string>
    <string name="lbl_tech_spec3">PARLANTES</string>
    <string name="lbl_tech_spec4">SENSIBILIDAD</string>
    <string name="lbl_tech_spec5">CAPACIDAD DE POTENCIA</string>
    <string name="lbl_tech_spec6">IMPEDANCIA</string>
    <string name="lbl_tech_spec7">GABINETE</string>
    <string name="lbl_tech_spec8">TERMINACIÓN</string>
    <string name="lbl_tech_spec9">REJA DE PROTECCIÓN</string>
    <string name="lbl_tech_spec10">ANCLAJES</string>
    <string name="lbl_tech_spec11">CONECTORES</string>
    <string name="lbl_tech_spec12">DIMENSIONES</string>
    <string name="lbl_tech_spec13">PESO</string>

    <string name="add_modelo">Ingrese el nombre del modelo</string>
    <string name="add_descripcion">Ingrese la descripcion del modelo</string>

</resources>
